<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:weightSum="1" android:layout_width="match_parent"
	android:layout_height="wrap_content" android:shrinkColumns="6,2">

	<TableRow>
		<TextView android:text="@string/fajr" android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView11" android:layout_weight="1">
		</TextView>
		<TextView android:text="@string/fajrTime" android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView12" android:layout_weight="1">
		</TextView>
	</TableRow>

	<TableRow>
		<TextView android:text="@string/shourouk"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView21" android:layout_weight="1">
		</TextView>
		<TextView android:text="@string/shouroukTime"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView22" android:layout_weight="1">
		</TextView>
	</TableRow>

	<TableRow android:layout_width="match_parent" android:layout_height="match_parent">
		<TextView android:text="@string/dhor" android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView31" android:layout_weight="1">
		</TextView>
		<TextView android:text="@string/dhorTime" android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView32" android:layout_weight="1">
		</TextView>
	</TableRow>

	<TableRow>
		<TextView android:text="@string/asr" android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView41" android:layout_weight="1">
		</TextView>
		<TextView android:text="@string/asrTime" android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView42" android:layout_weight="1">
		</TextView>
	</TableRow>

	<TableRow>
		<TextView android:text="@string/maghrib"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView51" android:layout_weight="1">
		</TextView>
		<TextView android:text="@string/maghribTime"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView52" android:layout_weight="1">
		</TextView>
	</TableRow>
	
	<TableRow>
		<TextView android:text="@string/isha" android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView61" android:layout_weight="1"></TextView>
		<TextView android:text="@string/ishaTime" android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/textView62" android:layout_weight="1"></TextView>
	</TableRow>

</TableLayout>
